welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit()){
^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
}
^