welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
def vuBiscuit():Boolean = {
while(!estSurBiscuit()){
	avance();
	return true
}
}
}
